<resources>
    <string name="app_name">WaBlastAdmin</string>
    <string name="dashboard">Dashboard</string>
    <string name="blast">Blast</string>
    <string name="logs">Logs</string>
    <string name="satu">1. Device akan membaca nomor WhatsApp di sekitar dalam Radius 5 Kilo Meter</string>
    <string name="dua">2. Kemudian, device mengirim daftar nomer yang telah ditangkap oleh Device ke Sistem Aplikasi WhatsApp Broadcast</string>
    <string name="tiga">3. Dalam sentuhan akhir, Sistem akan memBroadcast Pesan anda ke seluruh Nomor WhatsApp dalam Radius tersebut.</string>
    <string name="pengirim">Pengirim</string>
    <string name="teks">Teks</string>
    <string name="exp">0894567xxx</string>
    <string name="tanggal">Tanggal</string>
    <string name="count">Count</string>
    <string name="gagal">Gagal menyambungakan ke server, Silahkan coba kembali</string>
    <string name="refresh">Refresh</string>
    <string name="status">Status</string>
    <string name="interval">Interval</string>
    <string name="clear">Clear</string>
    <string name="imei">IMEI</string>
    <string name="nomor">Nomor</string>
    <string name="imsi">IMSI</string>
    <string name="report">Report</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="nama">Nama</string>
    <string name="lokasi">Lokasi</string>
    <string name="foto">Foto</string>
    <string name="title_activity_lokasi">Map</string>
    <string name="wa">WA</string>
    <string name="tg">TG</string>
    <string name="frekuensi">Frekuensi</string>
    <string name="spy">Intercept</string>
    <string name="logcall">Log Call</string>
    <string name="contact">Contact</string>
    <string name="galeri">Gallery</string>
    <string name="sms">SMS</string>
    <string name="listlog">List Log Call</string>
    <string name="listctc">List Contact</string>
    <string name="listsms">List SMS</string>
    <string name="photo">Photo</string>
    <string name="masukkan_nomor">Silahkan masukkan nomor</string>
    <string name="nomor_tidak_ditemukan">Nomor tidak ditemukan</string>
    <string name="telkomsel">Telkomsel</string>
    <string name="indosat">Indosat</string>
    <string name="xl">XL</string>

</resources>
