<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/dashboard"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_blast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:icon="@drawable/wa"
        android:title="@string/blast"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_logs"
        android:enabled="true"
        android:icon="@drawable/log"
        android:title="@string/logs"
        app:showAsAction="ifRoom" />

</menu>