<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.piramidsoft.wablastadmin.FragmentLogs">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/linear"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/tanggal"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/pengirim"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center|center_horizontal"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/teks"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/count"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/status"
                android:textStyle="bold" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/Swipe"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@+id/linear"
            android:layout_weight="1">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvLogs"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>
        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>

</RelativeLayout>
