<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.piramidsoft.wablastadmin.FragmentIndosat">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/btDown"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:src="@drawable/ic_arrow_up" />

            <ImageButton
                android:id="@+id/btDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@id/btSearch"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:src="@drawable/ic_arrow_down" />

            <ImageButton
                android:id="@+id/btSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:src="@drawable/ic_search_white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/txPengirim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/pengirim"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tx_xxxlarge" />

            <TextView
                android:id="@+id/txFrekuensi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="100dp"
                android:layout_toRightOf="@+id/txPengirim"
                android:text="@string/frekuensi"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tx_xxxlarge" />

            <TextView
                android:id="@+id/txInterval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="Interval : 0s"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tx_xxxlarge" />

            <TextView
                android:id="@+id/txCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="100dp"
                android:layout_toLeftOf="@+id/txInterval"
                android:text="Count : 0"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tx_xxxlarge" />


            <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/txCount"
                android:visibility="gone" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="0.8"
                android:background="@drawable/rounded_header"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/tanggal"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/rounded_header"
                android:gravity="center|center_horizontal"
                android:padding="10dp"
                android:text="@string/teks"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_header"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/imsi"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />


            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_header"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/nomor"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="0.7"
                android:background="@drawable/rounded_header"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/foto"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_header"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/nama"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="gone" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:visibility="gone" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="0.6"
                android:background="@drawable/rounded_header"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/lokasi"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="0.3"
                android:background="@drawable/rounded_header"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/wa"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="0.3"
                android:background="@drawable/rounded_header"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/tg"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvLogs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/pbCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
