<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:gpb="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.piramidsoft.wablastadmin.ProcessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/actionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_centerVertical="true"
                        android:id="@+id/btBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:paddingRight="20dp"
                        android:src="@drawable/ic_back" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/report"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/tx_xxxlarge"
                        android:textStyle="bold" />

                    <ImageButton
                        android:layout_marginRight="10dp"
                        android:padding="10dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_arrow_up"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/btDown"
                        android:id="@+id/btUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageButton
                        android:layout_marginRight="10dp"
                        android:padding="10dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_arrow_down"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/btSearch"
                        android:id="@+id/btDown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <ImageButton
                        android:padding="10dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_search_white"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:id="@+id/btSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.AppBarLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/txPengirim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/pengirim"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tx_xxxlarge" />

            <TextView
                android:layout_marginLeft="100dp"
                android:layout_toRightOf="@+id/txPengirim"
                android:id="@+id/txFrekuensi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/frekuensi"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tx_xxxlarge" />

            <TextView
                android:id="@+id/txInterval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="Interval : 0s"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tx_xxxlarge" />

            <TextView
                android:id="@+id/txCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="100dp"
                android:layout_toLeftOf="@+id/txInterval"
                android:text="Count : 0"
                android:textColor="@android:color/black"
                android:textSize="@dimen/tx_xxxlarge" />


            <com.jpardogo.android.googleprogressbar.library.GoogleProgressBar
                android:id="@+id/pbLoading"
                android:visibility="gone"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/txCount" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="0.8"
                android:background="@drawable/rounded_header"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/tanggal"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:background="@drawable/rounded_header"
                android:gravity="center|center_horizontal"
                android:padding="10dp"
                android:text="@string/teks"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_header"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/imsi"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />


            <TextView
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_header"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/nomor"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="0.7"
                android:background="@drawable/rounded_header"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/foto"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_header"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/nama"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:visibility="gone"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="0.6"
                android:background="@drawable/rounded_header"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/lokasi"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="0.3"
                android:background="@drawable/rounded_header"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/wa"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="0.3"
                android:background="@drawable/rounded_header"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/tg"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvLogs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>


    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/pbCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

</RelativeLayout>
